ざっと書いた

--- a/slide/custom.css
+++ b/slide/custom.css
@@ -17,3 +17,21 @@ section:before {
     height: 20vw;
     opacity: 0.5;
 }
+
+article strong {
+    font-weight: bold;
+}
+
+article code {
+    background-color: #eee;
+}
+
+blockquote {
+    opacity: 0.5;
+    border-left: solid 0.3vw;
+    padding-left: 1.2vw;
+}
+
+a {
+    color: inherit;
+}
