二つ目の資料が発生

--- a/slide2/custom.css
+++ b/slide2/custom.css
@@ -2,7 +2,13 @@ section {
     background-color: #ffeeff;
 }
 
-section span {
+section h1 {
+    width: 90%;
+    left: 5%;
+}
+
+section span,
+article span {
     display: inline-block;
 }
 
